--- a/knufit/pubspec.yaml
+++ b/knufit/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   sqflite: ^2.3.3+1
   path: ^1.8.1
+  crypto: ^3.0.1
 
 dev_dependencies:
   flutter_test:
