--- a/knufit/pubspec.yaml
+++ b/knufit/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   sqflite: ^2.3.3+1
   path: ^1.8.1
   crypto: ^3.0.1
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
