--- a/knufit/pubspec.yaml
+++ b/knufit/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   crypto: ^3.0.1
   image_picker: ^0.8.4+4
   shared_preferences: ^2.0.6 #자동 로그인
+  provider: ^6.0.1 #다크모드 전환 기능에 필요
 
 dev_dependencies:
   flutter_test:
