--- a/knufit/pubspec.yaml
+++ b/knufit/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
     - assets/
     - assets/back/
     - assets/chest/
+    - assets/shoulder/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
