--- a/knufit/pubspec.yaml
+++ b/knufit/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
     - assets/shoulder/
     - assets/triceps/
     - assets/biceps/
+    - assets/forearm/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
