--- a/knufit/pubspec.yaml
+++ b/knufit/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
     - assets/biceps/
     - assets/forearm/
     - assets/abs/
+    - assets/glutes/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
