feat: 대퇴사두 운동 카테고리 추가

--- a/knufit/pubspec.yaml
+++ b/knufit/pubspec.yaml
@@ -77,6 +77,8 @@ flutter:
     - assets/forearm/
     - assets/abs/
     - assets/glutes/
+    - assets/quadriceps/
+    - assets/hamstring/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
