--- a/knufit/pubspec.yaml
+++ b/knufit/pubspec.yaml
@@ -79,6 +79,8 @@ flutter:
     - assets/glutes/
     - assets/quadriceps/
     - assets/hamstring/
+    - assets/trapezius/
+    - assets/calf/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
