--- a/knufit/pubspec.yaml
+++ b/knufit/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   provider: ^6.0.1 #다크모드 전환 기능에 필요
   table_calendar: ^3.0.7
   intl: ^0.17.0
+  http: ^1.2.2
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
