--- a/knufit/pubspec.yaml
+++ b/knufit/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   intl: ^0.17.0
   http: ^1.2.2
   url_launcher: ^6.3.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -83,6 +84,7 @@ flutter:
     - assets/hamstring/
     - assets/trapezius/
     - assets/calf/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
