--- a/knufit/ios/Runner/Info.plist
+++ b/knufit/ios/Runner/Info.plist
@@ -57,5 +57,10 @@
   		<key>NSAllowsArbitraryLoads</key>
   		<true/>
 	</dict>
+
+	<key>NSCameraUsageDescription</key>
+	<string>카메라에 접근하기 위한 권한 설명</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>사진 라이브러리에 접근하기 위한 권한 설명</string>
 </dict>
 </plist>
