--- a/knufit/pubspec.yaml
+++ b/knufit/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   sqflite: ^2.3.3+1
   path: ^1.8.1
   crypto: ^3.0.1
-  image_picker: ^0.8.4+4
+  image_picker: ^1.1.2
   shared_preferences: ^2.0.6 #자동 로그인
   provider: ^6.0.1 #다크모드 전환 기능에 필요
   table_calendar: ^3.0.7
